[gd_scene load_steps=9 format=3 uid="uid://4fyoq8npekf0"]

[ext_resource type="PackedScene" uid="uid://barl4q1kugrmm" path="res://scenes/gameplay/pause-layer/pause-layer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://d3shxb6nxl2ea" path="res://scenes/world/galaxy_generator.tscn" id="2_2igb5"]
[ext_resource type="PackedScene" uid="uid://ddvglltbr24s5" path="res://scenes/world/parallax_background.tscn" id="2_ek37q"]
[ext_resource type="PackedScene" uid="uid://ob2eukf12eqd" path="res://autoload/globals.tscn" id="2_fqqji"]
[ext_resource type="PackedScene" uid="uid://cg144qa5b5ru8" path="res://autoload/events.tscn" id="3_2okot"]
[ext_resource type="PackedScene" uid="uid://d4iuvg5ysin3a" path="res://autoload/object_registry.tscn" id="3_u3hiw"]
[ext_resource type="Script" path="res://scenes/gameplay/gameplay.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://rhas31gnv33u" path="res://scenes/player/player_one.tscn" id="5_mdcg7"]

[node name="Gameplay" type="Node"]
script = ExtResource("5")

[node name="Globals" parent="." instance=ExtResource("2_fqqji")]
random_seed = true

[node name="Events" parent="." instance=ExtResource("3_2okot")]

[node name="ObjectRegistry" parent="." instance=ExtResource("3_u3hiw")]

[node name="ParallaxBackground" parent="." instance=ExtResource("2_ek37q")]
unique_name_in_owner = true

[node name="GalaxyGenerator" parent="." instance=ExtResource("2_2igb5")]
unique_name_in_owner = true

[node name="PlayerShip" parent="." instance=ExtResource("5_mdcg7")]

[node name="PauseLayer" parent="." instance=ExtResource("2")]
visible = false
